--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>Tomato Sauce</li>
     </ul>
     <picture>
-        <img src="images/lasagna.jpg" alt="LaSAgNA" width="500" height="300">
+        <img src="lasagna.jpg" alt="LaSAgNA" width="500" height="300">
     </picture>
     <p>My name is Haydn, I'm a Senior majoring in Information Science here at UIUC. I'm a bit of a gamer, I like hiking, and obviously I like lasagna.</p>
     <a href="https://github.com/haydnelm">Here's my github profile</a>
